# ncontrol-

./: .gitignore  Cargo.toml  Info.plist  LICENSE  README.md
src/: config_cli.rs  controller.rs  main.rs  send_cc.rs  settings.rs  ui.rs
